@@ -19,81 +19,73 @@ package com.lightstreamer.kafka.common.mapping.selectors;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.params.provider.Arguments.arguments;
+import static org.junit.Assert.assertThrows;
 
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.EmptySource;
-import org.junit.jupiter.params.provider.MethodSource;
-import org.junit.jupiter.params.provider.NullSource;
-import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Stream;
 
 public class SchemaTest {
 
-    static Stream<Set<String>> keySets() {
-        return Stream.of(Set.of("key1"), Set.of("key1", "key2"));
-    }
+    @Test
+    public void shouldCreateSchema() {
+        Schema schema = Schema.from("test", Set.of("a", "b"));
 
-    @ParameterizedTest
-    @MethodSource("keySets")
-    void shouldCreate(Set<String> keys) {
-        Schema schema = Schema.from("schemaName", keys);
-        assertThat(schema).isNotNull();
-        assertThat(schema.name()).isEqualTo("schemaName");
-        assertThat(schema.keys()).isEqualTo(keys);
-    }
-
-    @ParameterizedTest
-    @NullSource
-    @EmptySource
-    @ValueSource(strings = {"  ", "\t", "\n"})
-    void shouldNotCreate(String schemaName) {
-        assertThrows(IllegalArgumentException.class, () -> Schema.from(schemaName, Set.of("key")));
-        assertThrows(IllegalArgumentException.class, () -> Schema.empty(schemaName));
+        assertThat(schema.name()).isEqualTo("test");
+        assertThat(schema.keys()).containsExactly("a", "b");
     }
 
     @Test
-    void shouldCreateEmptySchema() {
-        Schema schema = Schema.empty("schemaName");
-        assertThat(schema).isNotNull();
-        assertThat(schema.name()).isEqualTo("schemaName");
+    public void shouldCreateEmptySchema() {
+        Schema schema = Schema.empty("test");
+
+        assertThat(schema.name()).isEqualTo("test");
         assertThat(schema.keys()).isEmpty();
     }
 
-    @ParameterizedTest
-    @MethodSource("keySets")
-    void shouldMatchWithSingleKey(Set<String> keys) {
-        Schema schema1 = Schema.from("schemaName", Collections.unmodifiableSet(keys));
-        Schema schema2 = Schema.from("schemaName", Collections.unmodifiableSet(keys));
+    @Test
+    public void shouldMatch() {
+        Schema schema1 = Schema.from("test", Set.of("a", "b"));
+        Schema schema2 = Schema.from("test", Set.of("a", "b"));
+
         assertThat(schema1.matches(schema2)).isTrue();
     }
 
-    @ParameterizedTest
-    @MethodSource("keySets")
-    void shouldNotMatchDueToDifferentNames(Set<String> keys) {
-        Schema schema1 = Schema.from("schemaName1", Collections.unmodifiableSet(keys));
-        Schema schema2 = Schema.from("schemaName2", Collections.unmodifiableSet(keys));
+    @Test
+    public void shouldNotMatchDifferentName() {
+        Schema schema1 = Schema.from("test1", Set.of("a", "b"));
+        Schema schema2 = Schema.from("test2", Set.of("a", "b"));
+
         assertThat(schema1.matches(schema2)).isFalse();
     }
 
-    static Stream<Arguments> notMatchingKeySets() {
-        return Stream.of(
-                arguments(Set.of("key1"), Set.of("key2")),
-                arguments(Set.of("key1", "key2"), Set.of("key1", "key3")),
-                arguments(Set.of("key1"), Collections.emptySet()));
+    @Test
+    public void shouldNotMatchDifferentKeys() {
+        Schema schema1 = Schema.from("test", Set.of("a", "b"));
+        Schema schema2 = Schema.from("test", Set.of("a", "c"));
+
+        assertThat(schema1.matches(schema2)).isFalse();
     }
 
-    @ParameterizedTest
-    @MethodSource("notMatchingKeySets")
-    void shouldNotMatchDueToDifferentKeys(Set<String> keySet1, Set<String> keySet2) {
-        Schema schema1 = Schema.from("schemaName", keySet1);
-        Schema schema2 = Schema.from("schemaName", keySet2);
-        assertThat(schema1.matches(schema2)).isFalse();
+    @Test
+    public void shouldThrowOnNullName() {
+        IllegalArgumentException exception =
+                assertThrows(
+                        IllegalArgumentException.class,
+                        () -> {
+                            Schema.from(null, Set.of("a", "b"));
+                        });
+        assertThat(exception.getMessage()).isEqualTo("Schema name must be a non empty string");
+    }
+
+    @Test
+    public void shouldThrowOnBlankName() {
+        IllegalArgumentException exception =
+                assertThrows(
+                        IllegalArgumentException.class,
+                        () -> {
+                            Schema.from("  ", Set.of("a", "b"));
+                        });
+        assertThat(exception.getMessage()).isEqualTo("Schema name must be a non empty string");
     }
 }
